--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "cs2",
   "version": "1.0.0",
-  "description": "",
+  "description": "CS2 backend server",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --write .",
-    "port": "3001"
+    "format": "prettier --write ."
   },
-  "author": "",
+  "author": "Min Iles",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
@@ -21,7 +21,8 @@
   },
   "devDependencies": {
     "husky": "^9.0.11",
-    "pretty-quick": "^4.0.0"
+    "pretty-quick": "^4.0.0",
+    "nodemon": "^2.0.4"
   },
   "husky": {
     "hooks": {
