--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "CS2 backend server",
   "main": "server.js",
   "scripts": {
+    "build": "webpack --mode production", 
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
